--- a/index.html
+++ b/index.html
@@ -70,9 +70,40 @@
   summary::-webkit-details-marker{display:none}
   details .section{padding:12px 14px 16px}
   canvas{width:100%;height:180px;background:#0f1629;border-radius:12px;border:1px solid #24304f}
+  /* --- Loading overlay --- */
+  #loadingOverlay {
+    position:fixed; inset:0; z-index:9999;
+    background:var(--bg);
+    display:flex; align-items:center; justify-content:center;
+    transition:opacity 0.6s cubic-bezier(.4,0,.2,1);
+  }
+  #loadingOverlay.hide {
+    opacity:0; pointer-events:none;
+  }
+  .loading-icon {
+    width:72px; height:72px;
+    animation:spin 1.2s linear infinite;
+    display:block;
+  }
+  @keyframes spin {
+    0% {transform:rotate(0deg);}
+    100% {transform:rotate(360deg);}
+  }
 </style>
 </head>
 <body>
+<!-- Loading overlay -->
+<div id="loadingOverlay">
+  <svg class="loading-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-label="Loading">
+    <defs>
+      <linearGradient id="gradBolt2" x1="0%" y1="0%" x2="100%" y2="100%">
+        <stop offset="0%" stop-color="#6d5ef7"/><stop offset="100%" stop-color="#38bdf8"/>
+      </linearGradient>
+    </defs>
+    <polygon points="24,4 44,28 32,28 48,60 20,32 34,32" fill="url(#gradBolt2)"/>
+  </svg>
+</div>
+
 <header>
   <div class="logo-wrap">
     <svg class="logo-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-label="Wattrix icon">
@@ -278,6 +309,15 @@ function bind(){
     recompute();
   };
 }
+
+// Loading animation logic
+window.addEventListener('DOMContentLoaded', ()=>{
+  setTimeout(()=>{
+    const overlay = $('loadingOverlay');
+    overlay.classList.add('hide');
+    setTimeout(()=>overlay.remove(), 700);
+  }, 1500);
+});
 
 bind();
 recompute();
