--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
         <div class="field">
           <label>Planned charging time before trip (hours)</label>
           <input id="plannedChargeHours" type="text" inputmode="decimal" placeholder="e.g. 3">
+          <div id="chargeTimeHint" style="color:var(--muted);font-size:12px;margin-top:4px"></div>
         </div>
       </div>
 
@@ -358,6 +359,18 @@ function recompute(){
   }
 
   $('breakdown').innerHTML = lines.join('');
+  // --- Show time needed to charge from current to target SOC ---
+  let hint = '';
+  if (cap > 0 && pwr > 0 && to > from) {
+    const kWhNeeded = cap * (to - from) / 100;
+    const hours = kWhNeeded / pwr;
+    const h = Math.floor(hours);
+    const m = Math.round((hours - h) * 60);
+    hint = `To charge from ${fmt(from,0)}% to ${fmt(to,0)}%: <b>${h}h ${m.toString().padStart(2,'0')}m</b> at ${fmt(pwr)} kW`;
+  } else if (to <= from) {
+    hint = `Target charge must be greater than current charge.`;
+  }
+  $('chargeTimeHint').innerHTML = hint;
 }
 
 function bind(){
