--- a/index.html
+++ b/index.html
@@ -115,7 +115,13 @@
     user-select: none;
   }
   @media (max-width: 600px) {
-    .lang-switcher { top: 10px; right: 10px; }
+    .lang-switcher { 
+      position: static;
+      margin: 12px auto 0 auto;
+      display: flex;
+      justify-content: center;
+      width: max-content;
+    }
   }
   .lang-btn {
     display: flex;
@@ -186,19 +192,6 @@
 
 <!-- Ad banner placeholder (replace with your ad provider code as needed) -->
 
-<!-- Language selector (modern floating button) -->
-<div class="lang-switcher" id="langSwitcher">
-  <button class="lang-btn" id="langBtn" aria-haspopup="listbox" aria-expanded="false">
-    <svg viewBox="0 0 20 20"><path d="M10 2a8 8 0 100 16 8 8 0 000-16zm6.93 7h-3.02A12.1 12.1 0 0013 4.36 6.03 6.03 0 0116.93 9zM10 4.06c.7.9 1.3 2.13 1.67 3.94H8.33C8.7 6.19 9.3 4.96 10 4.06zM4.36 11A10.7 10.7 0 014 10c0-.34.01-.67.04-1h3.02A13.6 13.6 0 007 15.64 6.03 6.03 0 013.07 11zm.57-2A10.7 10.7 0 014 10c0 .34.01.67.04 1h3.02A13.6 13.6 0 007 4.36 6.03 6.03 0 013.07 9zm9.63 2c-.13.93-.33 1.8-.6 2.64-.37 1.08-.84 2.01-1.33 2.7A6.03 6.03 0 0016.93 11h-3.02zm-2.7 4.3c-.37.53-.76.94-1.16 1.24-.4-.3-.79-.71-1.16-1.24-.37-.53-.7-1.17-.96-1.87h4.24c-.26.7-.59 1.34-.96 1.87zM10 15.94c-.7-.9-1.3-2.13-1.67-3.94h3.34c-.37 1.81-.97 3.04-1.67 3.94z"/></svg>
-    <span id="langBtnLabel">Suomi</span>
-    <svg style="width:14px;height:14px;fill:#9aa3b2;" viewBox="0 0 20 20"><path d="M5.5 8l4.5 4.5L14.5 8z"/></svg>
-  </button>
-  <div class="lang-dropdown" id="langDropdown" role="listbox">
-    <button class="lang-option" data-lang="fi" id="langOptFi">Suomi</button>
-    <button class="lang-option" data-lang="en" id="langOptEn">English</button>
-  </div>
-</div>
-
 <header>
   <div class="logo-wrap">
     <svg class="logo-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-label="Wattrix icon">
@@ -211,6 +204,20 @@
     </svg>
     <div class="logo-text">WATTRIX</div>
   </div>
+
+  <!-- Language selector (modern floating button) -->
+  <div class="lang-switcher" id="langSwitcher">
+    <button class="lang-btn" id="langBtn" aria-haspopup="listbox" aria-expanded="false">
+      <svg viewBox="0 0 20 20"><path d="M10 2a8 8 0 100 16 8 8 0 000-16zm6.93 7h-3.02A12.1 12.1 0 0013 4.36 6.03 6.03 0 0116.93 9zM10 4.06c.7.9 1.3 2.13 1.67 3.94H8.33C8.7 6.19 9.3 4.96 10 4.06zM4.36 11A10.7 10.7 0 014 10c0-.34.01-.67.04-1h3.02A13.6 13.6 0 007 15.64 6.03 6.03 0 013.07 11zm.57-2A10.7 10.7 0 014 10c0 .34.01.67.04 1h3.02A13.6 13.6 0 007 4.36 6.03 6.03 0 013.07 9zm9.63 2c-.13.93-.33 1.8-.6 2.64-.37 1.08-.84 2.01-1.33 2.7A6.03 6.03 0 0016.93 11h-3.02zm-2.7 4.3c-.37.53-.76.94-1.16 1.24-.4-.3-.79-.71-1.16-1.24-.37-.53-.7-1.17-.96-1.87h4.24c-.26.7-.59 1.34-.96 1.87zM10 15.94c-.7-.9-1.3-2.13-1.67-3.94h3.34c-.37 1.81-.97 3.04-1.67 3.94z"/></svg>
+      <span id="langBtnLabel">Suomi</span>
+      <svg style="width:14px;height:14px;fill:#9aa3b2;" viewBox="0 0 20 20"><path d="M5.5 8l4.5 4.5L14.5 8z"/></svg>
+    </button>
+    <div class="lang-dropdown" id="langDropdown" role="listbox">
+      <button class="lang-option" data-lang="fi" id="langOptFi">Suomi</button>
+      <button class="lang-option" data-lang="en" id="langOptEn">English</button>
+    </div>
+  </div>
+
   <p class="sub" data-i18n="subtitle">Suunnittele sähköauton lataus – energia, aika ja kustannukset helposti.</p>
   <p class="tag" data-i18n="tagline">Sähköauton latausmatriisi.</p>
 </header>
