--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="theme-color" content="#0b0f1a" />
 <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='1' y2='1'%3E%3Cstop offset='0' stop-color='%236d5ef7'/%3E%3Cstop offset='1' stop-color='%2338bdf8'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpolygon points='24,4 44,28 32,28 48,60 20,32 34,32' fill='url(%23g)'/%3E%3C/svg%3E">
+<!-- Google AdSense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2697517525197581"
+     crossorigin="anonymous"></script>
 <style>
   :root{
     --bg:#0b0f1a; --panel:#0f1629; --card:#121a2c; --muted:#9aa3b2; --text:#e5e7eb;
@@ -105,6 +108,22 @@
     letter-spacing: .1px;
     box-shadow: 0 2px 12px rgba(0,0,0,0.07);
   }
+  .wattrix-adsense {
+    max-width: 1200px;
+    margin: 0 auto 18px auto;
+    padding: 0;
+    background: #181f33;
+    border: 1px solid #28345a;
+    border-radius: 14px;
+    box-shadow: 0 2px 12px rgba(0,0,0,0.07);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 60px;
+  }
+  @media (max-width: 700px) {
+    .wattrix-adsense { min-height: 48px; }
+  }
   /* --- Language selector --- */
   .lang-switcher {
     position: absolute;
@@ -190,7 +209,18 @@
   </svg>
 </div>
 
-<!-- Ad banner placeholder (replace with your ad provider code as needed) -->
+<!-- AdSense banner (below header, above grid) -->
+<div class="wattrix-adsense">
+  <ins class="adsbygoogle"
+       style="display:block;width:100%;height:60px"
+       data-ad-client="ca-pub-2697517525197581"
+       data-ad-slot="1912268587"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+    (window.adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
 
 <header>
   <div class="logo-wrap">
@@ -305,6 +335,18 @@
         <div class="kpi"><div class="label" data-i18n="kpiCost">Kustannus</div><div class="value warn" id="kpiCost">€0.00</div></div>
       </div>
       <div class="divider"></div>
+      <!-- Inline AdSense ad (bottom of results card, optional) -->
+      <div class="wattrix-adsense" style="margin-top:0;">
+        <ins class="adsbygoogle"
+             style="display:block;width:100%;height:60px"
+             data-ad-client="ca-pub-2697517525197581"
+             data-ad-slot="1912268587"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+          (window.adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+      </div>
       <details open>
         <summary data-i18n="breakdownTitle">Yksityiskohdat</summary>
         <div class="section">
