Update label for battery capacity to improve clarity in Finnish translation

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <div class="content">
       <div class="form-grid">
         <div class="field">
-          <label data-i18n="usableKWh">Akun käytettävä kapasiteetti (kWh)</label>
+          <label data-i18n="usableKWh">Akun kapasiteetti (kWh)</label>
           <input id="usableKWh" type="number" min="1" step="0.1" placeholder="esim. 75">
         </div>
         <div class="field">
@@ -395,7 +395,7 @@ const i18n = {
     subtitle: "Suunnittele sähköauton lataus – energia, aika ja kustannukset helposti.",
     tagline: "Sähköauton latausmatriisi.",
     inputsTitle: "Syötteet",
-    usableKWh: "Akun käytettävä kapasiteetti (kWh)",
+    usableKWh: "Akun kapasiteetti (kWh)",
     avgEff: "Keskimääräinen kulutus",
     chargerPower: "Laturin teho (kW)",
     pricePerKWh: "Sähkön hinta",
