--- a/index.html
+++ b/index.html
@@ -183,6 +183,15 @@
   }
 </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WPLMYR2M1F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WPLMYR2M1F');
+</script>
 <body>
 <!-- Loading overlay -->
 <div id="loadingOverlay">
