--- a/about.html
+++ b/about.html
@@ -85,10 +85,19 @@ body{
 .nav-inner{
   max-width:1200px; margin:0 auto; padding: var(--s-2) var(--s-4);
   display:flex; align-items:center; gap:var(--s-3); justify-content:space-between;
+  flex-wrap:wrap;
 }
-.brand{display:flex; align-items:center; gap:12px; text-decoration:none; color:var(--text)}
-.brand .bolt{width:32px; height:32px}
-.brand .name{font-weight:700; letter-spacing:.2px}
+@media(max-width:700px){
+  .nav-inner{
+    flex-direction:column;
+    align-items:flex-start;
+    gap:12px;
+  }
+  .nav .brand{margin-bottom:8px;}
+  .nav .links{margin-bottom:8px;}
+  .nav-cta{width:100%; display:flex; gap:10px; flex-wrap:wrap;}
+}
+.nav-cta{display:flex; gap:10px; align-items:center;}
 .nav a{
   color:var(--text); text-decoration:none; padding:10px 14px; border-radius:10px;
   border:1px solid transparent;
@@ -124,6 +133,12 @@ body{
 .grid{display:grid; gap:16px}
 @media(min-width:960px){.grid.cols-2{grid-template-columns:1fr 1fr}}
 @media(min-width:1080px){.grid.cols-3{grid-template-columns:repeat(3,1fr)}}
+@media(max-width:959px){.grid.cols-2{grid-template-columns:1fr}}
+@media(max-width:1079px){.grid.cols-3{grid-template-columns:1fr}}
+@media(max-width:600px){
+  .container{padding:0 8px;}
+  .section{padding:32px 0;}
+}
 
 .card{
   position:relative; border-radius: var(--radius-xl);
@@ -226,13 +241,13 @@ footer{padding:24px 0; color:#a7b3ce; text-align:center; border-top:1px solid rg
       </article>
 
       <article class="card">
-        <h2>Design system</h2>
-        <p class="muted">Figma-style tokens define color, typography, radii, shadows, and gradients. The same variables power every page for a cohesive futuristic look.</p>
-        <div class="mono" style="margin-top:10px">:root → brand-1/2/3 • grad-hero • grad-card • radius-xl</div>
+        <h2>How it works</h2>
+        <p class="muted">Enter your EV and trip details. The calculator estimates energy needs, charging time, and cost. Results update instantly and stay private on your device.</p>
+        <div class="mono" style="margin-top:10px">No cloud • No tracking • No ads</div>
         <div style="margin-top:10px">
-          <span class="pill">Neon glass</span>
-          <span class="pill">Conic borders</span>
-          <span class="pill">Accessible focus</span>
+          <span class="pill">Fast math</span>
+          <span class="pill">Clear breakdown</span>
+          <span class="pill">Private</span>
         </div>
       </article>
     </div>
