--- a/calculator.html
+++ b/calculator.html
@@ -54,10 +54,20 @@ body{margin:0; color:var(--text); background:var(--bg-0); font:16px/1.6 var(--fo
   border-bottom:1px solid rgba(45,64,120,.35);
 }
 .nav-inner{max-width:1200px; margin:0 auto; padding: var(--s-2) var(--s-4);
-  display:flex; align-items:center; gap:var(--s-3); justify-content:space-between}
-.brand{display:flex; align-items:center; gap:12px; text-decoration:none; color:var(--text)}
-.brand .bolt{width:32px; height:32px}
-.brand .name{font-weight:700; letter-spacing:.2px}
+  display:flex; align-items:center; gap:var(--s-3); justify-content:space-between;
+  flex-wrap:wrap;
+}
+@media(max-width:700px){
+  .nav-inner{
+    flex-direction:column;
+    align-items:flex-start;
+    gap:12px;
+  }
+  .nav .brand{margin-bottom:8px;}
+  .nav .links{margin-bottom:8px;}
+  .nav-cta{width:100%; display:flex; gap:10px; flex-wrap:wrap;}
+}
+.nav-cta{display:flex; gap:10px; align-items:center;}
 .nav a{color:var(--text); text-decoration:none; padding:10px 14px; border-radius:10px; border:1px solid transparent}
 .nav a:hover{border-color:#2a3869}
 .nav a.active{background:#0f1830; border:1px solid #2a3869; box-shadow: inset 0 0 0 1px rgba(255,255,255,.02)}
@@ -72,9 +82,15 @@ body{margin:0; color:var(--text); background:var(--bg-0); font:16px/1.6 var(--fo
 .header h1{margin:0; font-size: clamp(28px, 4.8vw, 42px)}
 .header p{margin-top: var(--s-3); color:var(--muted)}
 
-/* Grid */
+/* Responsive grid improvements */
 .grid{display:grid; gap:16px}
 @media(min-width:960px){.grid.cols-2{grid-template-columns:1.1fr 1fr}}
+@media(max-width:959px){.grid.cols-2{grid-template-columns:1fr}}
+@media(max-width:600px){
+  .container{padding:0 8px;}
+  .section{padding:32px 0;}
+  .btnbar{flex-direction:column; gap:8px;}
+}
 
 /* Cards */
 .card{
