--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@ body{
   mask-image: radial-gradient(1000px 600px at 50% 10%, black 50%, transparent 100%);
 }
 
-/* Nav (shared) */
+/* NAV — EXACTLY LIKE index.html */
 .nav{
   position:sticky; top:0; z-index:50;
   backdrop-filter: blur(10px);
@@ -97,6 +97,11 @@ body{
   .nav .links{margin-bottom:8px;}
   .nav-cta{width:100%; display:flex; gap:10px; flex-wrap:wrap;}
 }
+.brand{
+  display:flex; align-items:center; gap:12px; text-decoration:none; color:var(--text);
+}
+.brand .bolt{width:32px; height:32px}
+.brand .name{font-weight:700; letter-spacing:.2px}
 .nav-cta{display:flex; gap:10px; align-items:center;}
 .nav a{
   color:var(--text); text-decoration:none; padding:10px 14px; border-radius:10px;
