--- a/calculator.html
+++ b/calculator.html
@@ -48,12 +48,15 @@ body{margin:0; color:var(--text); background:var(--bg-0); font:16px/1.6 var(--fo
   mask-image: radial-gradient(1000px 600px at 50% 10%, black 50%, transparent 100%);
 }
 
-/* Nav (shared) */
-.nav{position:sticky; top:0; z-index:50; backdrop-filter: blur(10px);
+/* NAV — EXACTLY LIKE index.html */
+.nav{
+  position:sticky; top:0; z-index:50;
+  backdrop-filter: blur(10px);
   background: linear-gradient(180deg, rgba(7,11,20,.75), rgba(7,11,20,.45));
   border-bottom:1px solid rgba(45,64,120,.35);
 }
-.nav-inner{max-width:1200px; margin:0 auto; padding: var(--s-2) var(--s-4);
+.nav-inner{
+  max-width:1200px; margin:0 auto; padding: var(--s-2) var(--s-4);
   display:flex; align-items:center; gap:var(--s-3); justify-content:space-between;
   flex-wrap:wrap;
 }
@@ -67,10 +70,15 @@ body{margin:0; color:var(--text); background:var(--bg-0); font:16px/1.6 var(--fo
   .nav .links{margin-bottom:8px;}
   .nav-cta{width:100%; display:flex; gap:10px; flex-wrap:wrap;}
 }
-.nav-cta{display:flex; gap:10px; align-items:center;}
+.brand{
+  display:flex; align-items:center; gap:12px; text-decoration:none; color:var(--text);
+}
+.brand .bolt{width:32px; height:32px}
+.brand .name{font-weight:700; letter-spacing:.2px}
 .nav a{color:var(--text); text-decoration:none; padding:10px 14px; border-radius:10px; border:1px solid transparent}
 .nav a:hover{border-color:#2a3869}
 .nav a.active{background:#0f1830; border:1px solid #2a3869; box-shadow: inset 0 0 0 1px rgba(255,255,255,.02)}
+.nav-cta{display:flex; gap:10px; align-items:center;}
 .btn{appearance:none; border:1px solid #2a3869; color:var(--text); background:#0c1429;
   padding:10px 14px; border-radius:12px; cursor:pointer; font-weight:600}
 .btn:hover{border-color:#5d79ff}
@@ -120,7 +128,7 @@ input[type=number]::-webkit-inner-spin-button{-webkit-appearance:none; margin:0}
 input[type=number]{-moz-appearance:textfield}
 
 .chips{display:flex; gap:8px; flex-wrap:wrap; margin-top:8px}
-.chip{padding:6px 10px; border-radius:999px; border:1px solid #31427d; background:#0e1730; cursor:pointer; font-size:12px}
+.chip{padding:6px 10px; border-radius:999px; border:1px solid #31427d; background:#0e1730; cursor:pointer; font-size:12px;color:#B7C3E0;}
 .btnbar{display:flex; gap:10px; flex-wrap:wrap; align-items:center; margin-top:12px}
 .errors{display:none; margin-top:10px; background:#2a1420; border:1px solid #5c2234; color:#ffd7de; padding:10px; border-radius:12px}
 
@@ -418,12 +426,12 @@ function recompute(){
     const h = Math.floor(actualHours);
     const m = Math.round((actualHours - h) * 60);
     lines.push(`<li>Energy added: <b>${fmt(actualAddedKWh)} kWh</b> / <b>${h}h ${m.toString().padStart(2,'0')}m</b></li>`);
-    lines.push(`<li>Battery after charging: <b>${fmt(afterChargeKWh)} kWh</b> (<b>${fmt(afterChargeSOC)}%</b>)</li>`);
+    lines.push(`<li>Battery after charging: <b>${fmt(afterChargeSOC)}%</b></li>`);
     if (destKWh < 0) {
       lines.push(`<li><span style="color:#ef4444"><b>At destination:</b> 0.0 kWh (0%)</span></li>`);
       lines.push(`<li><span style="color:#ef4444"><b>Warning:</b> Not enough energy for trip! Charge more on the road.</span></li>`);
     } else {
-      lines.push(`<li>Battery at destination: <b>${fmt(destKWh)} kWh</b> (<b>${fmt(destSOC)}%</b>)</li>`);
+      lines.push(`<li>Battery at destination: <b>${fmt(destSOC)}%</b></li>`);
     }
     lines.push(`<li>Cost for planned charge: <b>${currency}${fmt(plannedCost,2)}</b></li>`);
     lines.push(`</ul>`);
@@ -436,7 +444,7 @@ function recompute(){
       lines.push(`<li><span style="color:#ef4444"><b>At destination:</b> 0.0 kWh (0%)</span></li>`);
       lines.push(`<li><span style="color:#ef4444"><b>Warning:</b> Not enough energy for trip! Charge en route.</span></li>`);
     } else {
-      lines.push(`<li>Battery at destination: <b>${fmt(destNoCharge)} kWh</b> (<b>${fmt(destSOCNo)}%</b>)</li>`);
+      lines.push(`<li>Battery at destination: <b>${fmt(destSOCNo)}%</b></li>`);
     }
     lines.push(`</ul>`);
   }
